Fixed donate button not showing on iPad

--- a/sites/all/themes/bootsass/sass/custom/_main.scss
+++ b/sites/all/themes/bootsass/sass/custom/_main.scss
@@ -80,7 +80,7 @@ body {
         right: 0;
       }
     }
-    @media (max-width: $screen-sm) {
+    @media (max-width: $screen-xs-max) {
      &.block-views {
         display: none;
       }
